Refonte des logs pour production